# numeric-libs-benchmarks

./: .gitignore  README.md  numeric-libs-overview.cabal
app/: hmatrix-linear-algebra.hs  hmatrix.hs  vector.hs
benchmarks/: hmatrix-linear-algebra.html  hmatrix.html  vector.html
