name:                numeric-libs-overview
version:             0.1.0.0
synopsis:            benchmark/review numeric libraries
description:         Benchmark and review of different numeric libraries of Haskell
homepage:            https://github.com/mdibaiee/numeric-libs-overview#readme
license:             GPL-3
license-file:        LICENSE
author:              Mahdi Dibaiee
maintainer:          mdibaiee@aol.com
copyright:           2016 Mahdi Dibaiee
category:            Benchmark, Data Science, Numeric
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable vector
  hs-source-dirs:      app
  main-is:             vector.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , numeric-libs-overview
                     , vector
                     , criterion
  default-language:    Haskell2010

executable hmatrix
  hs-source-dirs:      app
  main-is:             hmatrix.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , numeric-libs-overview
                     , hmatrix
                     , criterion
  default-language:    Haskell2010

executable hmatrix-linear-algebra
  hs-source-dirs:      app
  main-is:             hmatrix-linear-algebra.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , numeric-libs-overview
                     , hmatrix
                     , criterion
  default-language:    Haskell2010

test-suite numeric-libs-overview-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , numeric-libs-overview
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mdibaiee/numeric-libs-overview
